@@ -15,6 +15,7 @@
 	* hun#2467643 update .vcproj files to include replist.?xx
 	* unify visiblity/dll_export support across platforms
 	* hun#2831289 sizeof(short) typo
+	* hun#2986756 add -u3 gcc style output
 
 2010-04-14 Caolán McNamara <cmc at OOo>:
 	* hun#2813804 fix segfault on hu_HU stemming
